--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
 
 </head>
 <body>
-
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar fixed-top ">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="#">Navbar</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    
+
     <div class="collapse navbar-collapse d-flex flex-row-reverse bd-highlight" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item active">
@@ -33,16 +32,17 @@
         </ul>
     </div>
   </nav>
-  <section>
-    <img src="" alt="">
+
+<div class="container d-flex mt-5">
+    <img src="https://i.picsum.photos/id/941/900/400.jpg" alt="" mx-50>
 <div class="card w-50">
   <div class="card-body">
-    <h5 class="card-title">Card title</h5>
+    <h2 class="card-title">Card title</h2>
     <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
     <a href="#" class="btn btn-primary">Button</a>
   </div>
 </div>
-  </section>
+</div>
 
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   <script
