--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
   </nav>
 
-<div class="container d-flex mt-5">
+<div class="container d-flex mt-5 mb-5">
     <img src="https://i.picsum.photos/id/941/900/400.jpg" alt="" mx-50>
 <div class="card w-50">
   <div class="card-body">
@@ -41,6 +41,15 @@
     <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
     <a href="#" class="btn btn-primary">Button</a>
   </div>
+</div>
+</div>
+
+<div class="row">
+  <div class="col-sm-12 mb-5">
+  <div class="card">
+    <div class="card-header">
+      Quote
+    </div>
 </div>
 </div>
 
